# wasm-resizer

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: lib.rs
worker/: worker.js
